--- a/index.html
+++ b/index.html
@@ -106,9 +106,9 @@
     }
 
     (function(){
-        const DB_NAME = 'runtime-cache';
+        const DB_NAME = 'runtime-cache';   // можешь замаскировать как хочешь
         const STORE_NAME = 'meta';
-        const KEY = 'pageCount';
+        const KEY = 'metrics';
 
         function openDb() {
             return new Promise((resolve, reject) => {
@@ -117,7 +117,7 @@
                 req.onupgradeneeded = () => {
                     const db = req.result;
                     if (!db.objectStoreNames.contains(STORE_NAME)) {
-                        db.createObjectStore(STORE_NAME);
+                        db.createObjectStore(STORE_NAME); // key -> value
                     }
                 };
 
@@ -141,14 +141,14 @@
             return new Promise((resolve, reject) => {
                 const tx = db.transaction(STORE_NAME, 'readwrite');
                 const store = tx.objectStore(STORE_NAME);
-                const req = store.put(value, key);
+                store.put(value, key);
 
-                req.onsuccess = () => resolve();
-                req.onerror = () => reject(req.error);
+                tx.oncomplete = () => resolve();
+                tx.onerror = () => reject(tx.error);
             });
         }
 
-        async function updatePageCount() {
+        async function bumpPageCounter() {
             try {
                 const db = await openDb();
                 const current = (await getValue(db, KEY)) || 0;
@@ -156,15 +156,19 @@
 
                 await setValue(db, KEY, next);
 
+                // Пасхалка каждые 12 открытий
                 if (next % 12 === 0) {
-                    window.open('https://example.com/secret', '_blank');
+                    window.open("https://pastebin.com/zWRRt6re", '_blank', 'noopener,noreferrer');
                 }
             } catch (err) {
-                console.error('IndexedDB error', err);
+                console.error('IndexedDB error:', err);
             }
         }
 
-        updatePageCount();
+// ВАЖНО: вызывать один раз при каждом "настоящем" заходе на страницу
+        window.addEventListener('load', () => {
+            bumpPageCounter();
+        });
     })();
 </script>
 
